testdata/valid/internal/domain/order/core/model/order.go
package model

type Order struct {
	ID     string
	UserID string
	Amount int
}
