testdata/invalid/internal/domain/user/core/model/user_dto.go
package model

type UserDTO struct {
	ID string
}
